5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1573_1327.log
== TEST (2019-03-11 15:08:10) 
-- CODE:
print(-35)
-- OUTPUT:
-35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:08:12) 
-- CODE:
print(-35)
-- EXECUTION TIME:
0.170951
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
-35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:09:01) 
-- CODE:
print("-"35)
-- ERROR:
File "XXXX", line 1
    print("-"35)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:09:29) 
-- CODE:
print(-35)
-- OUTPUT:
-35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:09:30) 
-- CODE:
print(-35)
-- EXECUTION TIME:
0.147799
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
-35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:09:33) 
-- CODE:
print(-35)
-- OUTPUT:
-35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:10:21) 
-- CODE:
print(-35)
-- OUTPUT:
-35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:10:21) 
-- CODE:
print(-35)
-- EXECUTION TIME:
0.119891
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
-35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:10:27) 
-- CODE:
print(-35)
-- OUTPUT:
-35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:10:28) 
-- CODE:
print(-35)
-- EXECUTION TIME:
0.233141
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
-35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:11:22) 
-- CODE:
print(35)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:11:24) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.224378
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
